# wavedrom-rs

./: .gitignore  404.html  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  cycle-enumeration.html  deny.toml  edges.html  flake.nix  header-footer.html  introduction.html  print.html  release.toml  searchindex.js  searchindex.json  signal-groups.html  skins.html  wavedrom-js.html
.github/workflows/: docs-deploy.yml  editor-deploy.yml  release.yml
assets/animated/: cross.json  dark.json  groups.json  head-line.json  make.sh  read-cache-hit.json
demo/: index.html  index.js
demo/rust/: Cargo.toml
demo/rust/src/: lib.rs
dev-doc/: releasing.md
docs/: book.toml
docs/src/: SUMMARY.md  cycle-enumeration.md  edges.md  header-footer.md  introduction.md  signal-groups.md  skins.md  wavedrom-js.md
docs/src/installation/: ci.md  cli.md  crate.md  editor.md  mdbook.md
docs/src/signal-types/: clock.md  data.md  gap.md  mod.md  top-bottom.md  up-down.md  z-x.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: wavejson_render.rs
installation/: ci.html  cli.html  crate.html  editor.html  mdbook.html
mdbook-wavedrom/: Cargo.toml  README.md
mdbook-wavedrom-rs/: Cargo.toml  README.md
mdbook-wavedrom-rs/src/: lib.rs  main.rs
mdbook-wavedrom/src/: lib.rs  main.rs
signal-types/: clock.html  data.html  gap.html  mod.html  top-bottom.html  up-down.html  z-x.html
skins/: dark.json5  template.json5
src/: cycle_offset.rs  lib.rs  main.rs  markers.rs  outline_builder.rs  path.rs  rect.rs  svg.rs  wavejson.rs
src/svg/: font.rs  mod.rs
tests/: hscale.json5  run.py  run.sh
tests/edges/: cross.json5  edge-text.json5  render-order.json5  sharp-bh-B.json5  sharp-bh-E.json5  sharp-bh-N.json5  sharp-bh-S.json5  sharp-eh-B.json5  sharp-eh-E.json5  sharp-eh-N.json5  sharp-eh-S.json5  sharp-sh-B.json5  sharp-sh-E.json5  sharp-sh-N.json5  sharp-sh-S.json5  sharp_both-horizontal_both-arrows.json5  sharp_cross.json5  sharp_end-horizontal_both-arrows.json5  sharp_end-horizontal_end-arrow.json5  sharp_start-horizontal_both-arrows.json5  sharp_start-horizontal_no-arrows.json5  sharp_start-horizontal_start-arrow.json5  spline-bh-B.json5  spline-bh-E.json5  spline-bh-N.json5  spline-bh-S.json5  spline-eh-B.json5  spline-eh-E.json5  spline-eh-N.json5  spline-eh-S.json5  spline-sh-B.json5  spline-sh-E.json5  spline-sh-N.json5  spline-sh-S.json5  spline_both-horizontal_both-arrows.json5  spline_both-horizontal_no-arrows.json5  spline_end-horizontal_no-arrows.json5  spline_end-horizontal_start-arrow.json5  spline_start-horizontal_both-arrows.json5  spline_start-horizontal_start-arrow.json5  (+7 more)
tests/footer/: cycle-enumeration-with-every.json5  cycle-enumeration-with-text.json5  cycle-enumeration.json5  hello-world.json5
tests/groups/: embed.json5  embed_labels.json5  label.json5  multi-line.json5  multiple-groups.json5  single-line.json5  stacks.json5
tests/header/: cycle-enumeration-with-every.json5  cycle-enumeration-with-text.json5  cycle-enumeration.json5  hello-world.json5
tests/reg/: 1bit-per-lane.json5  2-lanes.json5  basic.json5  pad.json5  vflip.json5  vl.json5
tests/states/: bottom.json5  clock_negedge.json5  clock_posedge.json5  data-text.json5  data.json5  down.json5  high-impedance.json5  high.json5  low.json5  top.json5  undefined.json5  up.json5
wavedrom/: Cargo.toml
wavedrom-cli/: Cargo.toml
wavedrom-cli/src/: main.rs
wavedrom-core/: Cargo.toml
wavedrom-core/src/: color.rs  cycle_offset.rs  edges.rs  figure.rs  lib.rs  path.rs  shortcuts.rs  signal.rs  skin.rs  wavejson.rs
wavedrom-core/src/svg/: dimensions.rs  edges.rs  font.rs  mod.rs  options.rs
wavedrom-wasm/: .gitignore  Cargo.toml  README.md  index.html  index.js  tailwind.config.js
wavedrom-wasm/.cargo/: config  config.toml
wavedrom-wasm/src/: lib.rs  options.rs  render_options.rs
wavedrom/src/: color.rs  edges.rs  escape.rs  figure.rs  font.rs  lib.rs  main.rs  options.rs  shortcuts.rs  skin.rs
wavedrom/src/reg/: mod.rs  options.rs
wavedrom/src/reg/render/: mod.rs
wavedrom/src/signal/: edges.rs  figure.rs  markers.rs  mod.rs  options.rs  path.rs
wavedrom/src/signal/render/: dimensions.rs  edges.rs  mod.rs
wavedrom/src/svg/: dimensions.rs  edges.rs  mod.rs
wavedrom/src/wavejson/: mod.rs  reg.rs  signal.rs
