[workspace]
members = [
	"wavedrom",
	"wavedrom-wasm",
    "mdbook-wavedrom-rs",
]

[workspace.package]
version = "0.1.0"
authors = ["Gijs Burghoorn <me@gburghoorn.com>"]
repository = "https://github.com/coastalwhite/wavedrom-rs"
homepage = "https://github.com/coastalwhite/wavedrom-rs"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Pure Rust Digital Timing Diagram Generator based on WaveDrom-JS"
rust-version = "1.70"

[workspace.dependencies]
clap = "4.3.2"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.70"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
