[package]
name = "mdbook-wavedrom-rs"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license = "MPL-2.0"

keywords = ["diagram", "svg", "signal", "digital", "timing"]
categories = ["graphics", "visualization", "wasm"]
description = "A MdBook preprocessor for WaveDrom Digital Timing Diagrams"

[dependencies]
anyhow = "1.0.71"
pulldown-cmark = "0.9.3"
pulldown-cmark-to-cmark = "10.0.4"
semver = "1.0.17"
serde_json = "1.0.96"

[dependencies.clap]
workspace = true

[dependencies.mdbook]
version = "0.4.30"
default-features = false

[dependencies.wavedrom]
path = "../wavedrom"
version = "0.1.0"
