[package]
name = "mdbook-wavedrom"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.71"
pulldown-cmark = "0.9.3"
pulldown-cmark-to-cmark = "10.0.4"
semver = "1.0.17"
serde_json = "1.0.96"

[dependencies.clap]
workspace = true

[dependencies.mdbook]
version = "0.4.30"
no-default-features = []

[dependencies.wavedrom]
path = "../wavedrom-core"
