[package]
name = "wavedrom-cli"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wavedrom"
path = "src/main.rs"

[dependencies.clap]
workspace = true

[dependencies.wavedrom]
path = "../wavedrom-core"
