[package]
name = "wavedrom"
version = "0.1.0"
edition = "2021"
include = ["/src", "/helvetica.ttf"]

[dependencies.ttf-parser]
version = "0.19.0"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[features]
default = ["wavejson", "embed_font"]
wavejson = ["serde", "serde_json"]
embed_font = ["ttf-parser"]
