[package]
name = "wavedrom"
version = "0.1.0"
edition = "2021"
include = ["/src", "/helvetica.ttf"]

[dependencies.json5]
version = "0.4.1"
optional = true

[dependencies.ttf-parser]
version = "0.19.0"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[features]
default = ["json5", "embed_font"]
embed_font = ["dep:ttf-parser"]
json5 = ["dep:json5", "serde"]
serde_json = ["dep:serde_json", "serde"]
