[package]
name = "wavedrom-wasm"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

description = "A WASM interface for WaveDrom Digital Timing Diagrams"

publish = false

[lib]
crate-type = ["cdylib"]

[dependencies.wavedrom]
path = "../wavedrom"
