[package]
name = "wavedrom"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
rust-version.workspace = true

keywords = ["diagram", "svg", "signal", "digital", "timing"]
categories = ["graphics", "visualization", "wasm"]

include = ["/src", "/helvetica.ttf", "/assets", "/README.md"]

[dependencies.json5]
version = "0.4.1"
optional = true

[dependencies.ttf-parser]
version = "0.20.0"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.arbitrary]
version = "1.3.2"
optional = true
features = ["derive"]


[dependencies.resvg]
version = "0.37.0"


[dependencies.usvg]
version = "0.37.0"


[features]
default = ["json5", "embed_font", "skins"]
embed_font = ["dep:ttf-parser"]
skins = ["serde"]
json5 = ["dep:json5", "serde"]
serde_json = ["dep:serde_json", "serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
